test/deca/context/invalid/3_24_return_void.deca
// Description:
//    Fonction ayant un return null
//
// Resultats:
//    Ligne 9: la fonction n'a pas de return.

{
    int renv(){
        int i = 2;
        }
}